--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mern-authentication",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "backend/server.js",
   "scripts": {
     "start": "node backend/server.js",
@@ -16,6 +17,7 @@
     "colors": "^1.4.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^6.3.5"
   }
 }
