--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NODE_ENV = development
 PORT = 5000
+CONNECT_URL = mongodb+srv://oba-codes:ogfundz304@blogcluster.rk7lv.mongodb.net/MERN-authentication?retryWrites=true&w=majority
