--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "scripts": {
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
-    "client": "npm start --prefix frontend"
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "daniel asakpa",
   "license": "MIT",
   "devDependencies": {
+    "concurrently": "^7.2.1",
     "nodemon": "^2.0.16"
   },
   "dependencies": {
@@ -22,6 +24,8 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.5",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1"
   }
 }
